1. add module weapon-jersey 2. optimize codes   1) optimize warning codes   2) optimize bean registry to support single and map bean